# bag-epl-mcp

./: CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  README.de.md  README.md  claude_desktop_config.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/bag_epl_mcp/: __init__.py  server.py
tests/: test_server.py
